[package]
name = "latex"
version = "0.3.2-alpha.0"
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
description = "An ergonomic library for programatically generating LaTeX documents and reports."
readme = "README.md"
keywords = ["latex", "reports", "pdf", "tex", "generation"]
license = "MIT"
homepage = "https://github.com/Michael-F-Bryan/latex-rs"
repository = "https://github.com/Michael-F-Bryan/latex-rs"
documentation = "https://docs.rs/latex"
categories = ["template-engine", "text-processing"]
autoexamples = true

[dependencies]
failure = "0.1.5"
tectonic = { version = "0.14.1", features = ["external-harfbuzz"], optional = true}

[features]
tectonic = ["dep:tectonic"]

[[example]]
name = "tectonic"
required-features = ["tectonic"]